add react router & Pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,92 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+  width: 100%;
+  height: 112px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+a {
+  text-decoration: none;
+
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+nav a {
+  margin-left: 15px;
+  color: #4D4D4D;
+  font-size: 16px;
+}
+
+.logo {
+  width: 144px;
+  height: 41px;
+  font-weight: 900;
+  font-size: 25.35px;
+  color: #000;
+}
+
+footer {
+  background: #252525;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #AAA;
+  font-size: 14px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* //////////// HOME ////////////// */
+.home {
+  height: calc(100vh - (112px + 75px));
+  background-image: url('image 54.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.home .container {
+  width: 100%;
+  background-color: #0000008a;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  padding: 0 30px;
+}
+
+.home .container h2 {
+  font-size: 36px;
+  font-weight: 800;
+}
+
+.home .container p {
+  max-width: 500px;
+  margin: 20px;
+  line-height: 1.7;
+  letter-spacing: 1.2px;
+}
+
+.home .container button {
+  cursor: pointer;
+  border: none;
+  color: #fff;
+  background: #FF8C38;
+  font-size: 15.946px;
+  padding: 9px 25px;
+  font-weight: 700;
+  border-radius: 5px;
+
 }
